tests/integration/snapshots/integration__snapshot_terminal_test__terminal_cursor_up.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 52
expression: "process(\"Line1\\nLine2\\nLine3\\x1b[2AX\")"
---
Line1          X
     Line2
          Line3
