tests/integration/snapshots/integration__snapshot_terminal_test__terminal_dec_save_restore_cursor.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 238
expression: "process(\"Hello\\x1b7 World\\x1b8X\")"
---
HelloXWorld
