tests/integration/snapshots/integration__snapshot_terminal_test__terminal_erase_entire_line.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 101
expression: "process(\"Hello World\\x1b[2K\")"
---

