tests/integration/snapshots/integration__snapshot_terminal_test__terminal_erase_entire_screen.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 116
expression: "process(\"Line1\\nLine2\\nLine3\\x1b[2J\")"
---

