tests/integration/snapshots/integration__snapshot_terminal_test__terminal_erase_to_end_of_screen.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 106
expression: "process(\"Line1\\nLine2\\nLine3\\n\\x1b[2;1H\\x1b[J\")"
---
Line1
