tests/integration/snapshots/integration__snapshot_terminal_test__terminal_erase_to_start_of_line.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 96
expression: "process(\"Hello World\\x1b[6G\\x1b[1K\")"
---
      World
