tests/integration/snapshots/integration__snapshot_terminal_test__terminal_erase_to_start_of_screen.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 111
expression: "process(\"Line1\\nLine2\\nLine3\\n\\x1b[2;3H\\x1b[1J\")"
---

     Line2
          Line3
