tests/integration/snapshots/integration__snapshot_terminal_test__terminal_multiline_text.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 32
expression: "process(\"Line 1\\nLine 2\\nLine 3\")"
---
Line 1
      Line 2
            Line 3
