tests/integration/snapshots/integration__snapshot_terminal_test__terminal_newline_scroll.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 171
expression: "process_sized(&input, 20, 10)"
---
     Line6
          Line7
               Line8

Line9
     Line10
           Line11
                 Lin
e12
