tests/integration/snapshots/integration__snapshot_terminal_test__terminal_progress_bar_update.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 271
expression: buf.to_string()
---
Downloading...
[##########] 100%        ] 0%
                 Done!
