tests/integration/snapshots/integration__snapshot_terminal_test__terminal_prompt_pattern.snap
---
source: tests/integration/snapshot_terminal_test.rs
assertion_line: 260
expression: "process(\"\\x1b[32muser\\x1b[0m@\\x1b[34mhost\\x1b[0m:\\x1b[33m~/dir\\x1b[0m$ \")"
---
user@host:~/dir$
